# sc-ios

./: .env  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md
ios/: CMakeLists.txt  ios-simulator.toolchain.cmake  ios.toolchain.cmake
ios/Assets/: README.md
ios/OpenBW-iOS/: Package.swift
ios/OpenBW-iOS/Sources/OpenBWBridge/: OpenBWBridge.h  OpenBWBridge.mm
ios/OpenBW-iOS/Sources/OpenBWCore/: MPQLoader.h  MPQLoader.mm  MetalRenderer.h  MetalRenderer.mm  OpenBWGameRunner.h  OpenBWGameRunner.mm  OpenBWRenderer.h  OpenBWRenderer.mm  ios_platform.mm  openbw_instantiate.cpp
ios/OpenBW-iOS/Sources/StarCraftApp/: GameView.swift  MetalGameView.swift  OpenBW.swift  StarCraft-Bridging-Header.h  StarCraftApp.swift  TouchInputManager.swift
ios/StarCraft.xcodeproj/: project.pbxproj
ios/StarCraft.xcodeproj/project.xcworkspace/xcuserdata/cypher.xcuserdatad/: UserInterfaceState.xcuserstate
ios/StarCraft.xcodeproj/xcuserdata/cypher.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/build-device/: CMakeCache.txt  cmake_install.cmake
ios/build-device/CMakeScripts/: ReRunCMake.make
ios/build-device/OpenBW-iOS.xcodeproj/: project.pbxproj
ios/build-sim/: CMakeCache.txt  cmake_install.cmake
ios/build-sim/CMakeScripts/: ReRunCMake.make
ios/build-sim/OpenBW-iOS.xcodeproj/: project.pbxproj
